--- a/package.json
+++ b/package.json
@@ -43,12 +43,12 @@
     "gulp-util": "^3.0.2",
     "jshint-stylish": "^1.0.0",
     "qqunit": "^0.6.0",
-    "react": ">=0.14.0",
+    "react": "^0.14.0",
     "react-dom": ">=0.14.0",
     "vinyl-source-stream": "^1.0.0"
   },
   "peerDependencies": {
-    "react": ">=0.14.0"
+    "react": "^0.14.0"
   },
   "scripts": {
     "dist": "gulp browserify-js --production --release && gulp browserify-js --development --release",
