--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "jshint-stylish": "^1.0.0",
     "qqunit": "^0.6.0",
     "react": "^0.14.0",
-    "react-dom": ">=0.14.0",
+    "react-dom": "^0.14.0",
     "vinyl-source-stream": "^1.0.0"
   },
   "peerDependencies": {
